--- a/slides/barcampsk4-blog-dev-with-github-page/index.html
+++ b/slides/barcampsk4-blog-dev-with-github-page/index.html
@@ -1,8 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Title</title>
+    <title>Let's Make a Blog in Developer Way</title>
     <meta charset="utf-8">
+    <meta name="author" content="Mildronize">
+    <meta name="description" content="แนะนำวิธีการสร้างบล็อคสไตล์ Developer โดยใช้ GitHub Page และ Jekyll">
+    <meta name="keywords" content="bacrcamp,songkhla,barcampsk,blog,GitHub Page, Jeykll">
     <!-- <link rel="stylesheet" href="http://dev.mildronize.com/slides/resources/boon-font.css"> -->
     <link rel="stylesheet" href="../resources/boon-font.css">
     <!-- <link rel="stylesheet" href="http://locahost:8000/resources/wp-domino-novel-font.css"> -->
