Add first version of docker slide

--- a/slides/introduction-to-docker-for-project-preparation/index.html
+++ b/slides/introduction-to-docker-for-project-preparation/index.html
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Let's Make a Blog in Developer Way</title>
+    <title>Introduction to Docker for Project Preparation</title>
     <meta charset="utf-8">
-    <meta name="author" content="Mildronize">
-    <meta name="description" content="แนะนำวิธีการสร้างบล็อคสไตล์ Developer โดยใช้ GitHub Page และ Jekyll">
-    <meta name="keywords" content="bacrcamp,songkhla,barcampsk,blog,GitHub Page, Jeykll">
+    <meta name="author" content="Thada Wangthammang">
+    <meta name="description" content="Introduction to Docker for Project Preparation">
+    <meta name="keywords" content="songkhla,docker">
     <!-- <link rel="stylesheet" href="http://dev.mildronize.com/slides/resources/boon-font.css"> -->
     <link rel="stylesheet" href="../resources/font-Boon.css">
     <link rel="stylesheet" href="../resources/font-WpDominoNovel.css">
-    <link rel="stylesheet" href="../resources/font-ThaiSansLite.css"> 
+    <link rel="stylesheet" href="../resources/font-ThaiSansLite.css">
     <link rel="stylesheet" href="http://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700|Abril+Fatface">
     <style>
       @import url(https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic);
       @import url(https://fonts.googleapis.com/css?family=Ubuntu+Mono:400,700,400italic);
       @import url(https://fonts.googleapis.com/css?family=Inconsolata:400,700);
       /* thai */
-        
+
       body {
-       font-family: ThaiSansLite, 'Droid Serif', Arial, sans-serif;
+       font-family: 'PT Sans', ThaiSansLite , Arial, sans-serif;
       }
       h1, h2, h3 {
         font-family: ThaiSansLite;
@@ -31,9 +31,49 @@
       }
       li {
         margin-bottom: 10px;
+        font-size: 30pt;
+      }
+      p{
+       font-size: 25pt;
+      }
+      a:link,a:visited {
+          text-decoration: none;
+          color: inherit;
+      }
+      a:hover, a:active {
+          text-decoration: underline;
+          color: inherit;
+      }
+      /*http://www.webmaster-source.com/2012/04/24/pure-css-blockquote-styling/ */
+      blockquote {
+        font-family: Georgia, serif;
+        font-style: italic;
+        width: 500px;
+        margin: 0.25em 0;
+        padding: 0.25em 40px;
+        line-height: 1.45;
+        position: relative;
+        color: #383838;
+      }
+      blockquote:before {
+        display: block;
+        content: "\201C";
+        font-size: 80px;
+        position: absolute;
+        left: -20px;
+        top: -20px;
+        color: #7a7a7a;
+        }
+      .footnote{
+        color: #7a7a7a;
+        font-size: 15px;
+        position: absolute;
+        text-align: center;
+        bottom: 15px;
+        left: 30px;
       }
       .remark-code, .remark-inline-code { font-family: 'Inconsolata'; }
-        
+
     </style>
   </head>
   <body>
